my first commit

--- a/index.html
+++ b/index.html
@@ -39,8 +39,31 @@
                     </div> 
                 </div>
             </div>
-            
+        </div>
     </header>
+
+    <section>
+        <div class="section">
+           <div class="section_top">
+            <h1>
+                Featured In 
+            </h1>
+           </div>
+<div class="section_img">
+    <div class="img1">
+        <img src="./img/vogue.png" alt="vogue">
+    </div>
+    <div class="img2">
+        <img src="./img/clamour.png" alt="clamour">
+    </div>
+    <div class="img3">
+        <img src="./img/the.png" alt="the">
+    </div>
+
+</div>
+        </div>
+        
+    </section>
 
 </body>
 
