--- a/index.html
+++ b/index.html
@@ -254,6 +254,95 @@
         </div>
 
     </main>
+    <footer>
+
+     
+    <div class="footer container">
+        <div class="footer_content">
+            <h1>Raise your supplement standards.</h1>
+        </div>
+        <div class="footer_item">
+            <h4>SHOP</h4>
+            <ul>
+                <li>
+                    <a href="#">FAQS</a>
+                </li>
+                <li>
+                    <a href="#">ACCOUNT</a>
+                </li>
+                <li>
+                    <a href="#">CART</a>
+                </li>
+
+            </ul>
+        </div>
+        <div class="footer_item">
+            <h4>CONNECT</h4>
+            <ul>
+                <li>
+                    <a href="#">Learn</a>
+
+                </li>
+                <li>
+                    <a href="#">care@landkind.health</a>
+                </li>
+                <li>
+                    <a href="#">855-305-9894</a>
+                </li>
+                <li>
+                    <a href="#">Instagram</a>
+                </li>
+                <li>
+                    <a href="#">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="#">Facebook</a>
+                </li>
+                <li>
+                    <a href="#">Twitter</a>
+                </li>
+                <li>
+                    <a href="#">Pinterest</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+    <div class="footer_info container">
+        <div class="footer_info_top">
+            <ul>
+                <li>
+                 <a href="#">Privacy Policy</a>   
+                </li>
+                <li>
+                    <a href="#">Terms of Use</a>
+                </li>
+                <li>
+                    <a href="#">Return policy</a>
+                </li>
+                <li>
+                    <a href="#">Affiliates</a>
+                </li>
+                <li>
+                    <a href="#">Ambassador Program</a>
+                </li>
+            </ul>
+  
+        </div>
+        <div class="footer_info_bottom">
+            <p>© 2023Landkind,Inc.</p>
+           
+            <div class="bottom">
+                <p>
+                    *These statements have not been evaluated by the Food and Drug Administration. This product is not intended to diagnose, treat, cure, or prevent any disease.  
+                </p>
+            </div>
+        </div>
+
+
+    </div>
+</footer>
 
 
 
